Fixed some code formatting, a little bit of CSS spacing, and got the background image to take up the whole page

--- a/Frontend/src/styles/Login.css
+++ b/Frontend/src/styles/Login.css
@@ -4,24 +4,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /*
     background-image: url('../images/login-background.jpg');
-    /* background-size: 100%; */
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    */
 }
 
 .login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 193px;
+    position: absolute;
+    top: 30%;
     border-radius: 10px;
     width: 300px;
-    padding: 50px 50px;
-    box-shadow:5px 5px 10px hsla(0, 100%, 0%, 0.2),
-    -5px -5px 10px hsla(0, 100%, 0%, 0.2);
+    padding: 50px 25px;
+    box-shadow: 0px 0px 15px hsla(0, 100%, 0%, 0.4);
     background-color: hsl(0, 0%, 95%);
 }
 
@@ -29,15 +30,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    outline: none;
-
+    width: 100%;
 }
 
 .ukglogo {
     width: 75%;
     padding: 5px;
     border-radius: 10%;
-    margin-bottom: 10px;
+    margin: 0px 25px;
+    margin-bottom: 15px;
 
 }
 
@@ -45,14 +46,17 @@ input {
     outline: none;
     padding: 10px;
     margin: 10px;
-    box-shadow: 3px 3px 8px hsla(0, 100%, 0%, 0.2),
-    -3px -3px 10px rgb(247, 247, 247);
+    width: 80%;
+    box-shadow: 
+        inset 2px 2px 6px hsla(0, 100%, 0%, 0.1),
+        3px 3px 8px hsla(0, 100%, 0%, 0.2),
+        -3px -3px 10px hsl(0, 0%, 100%);
     border-top-style: hidden;
     border-right-style: hidden;
     border-left-style: hidden;
     border-bottom-style: hidden;
     border-radius: 5px;
-    background-color: hsl(0, 0%, 95%);
+    background-color: hsl(0, 0%, 100%);
 }
 
 #email-valid:focus {
@@ -74,6 +78,10 @@ label {
     color: white;
     font-size: 15px;
     background-color: rgb(0, 81, 81);
+    width: 60%;
+}
+#submit:hover {
+    cursor: pointer;
 }
 
 #err-msg {
